housekeeping: including latest version error prone and error prone support